# kalbot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  main.py  routes.py
docs/: bastion-inspiration-2026-02-16.md  bot-intel-feed.sample.json  kalbot-blueprint.md  kalbot-noob-guide.md  purplesalmon-analysis-2026-02-16.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  style.css
infra/: docker-compose.yml
infra/migrations/: 001_initial_schema.sql  002_bot_intel.sql
kalbot/: __init__.py  backtest_repo.py  bot_intel_repo.py  data_quality_repo.py  db.py  kalshi_ingest.py  paper_execution.py  performance_repo.py  provenance_repo.py  schemas.py  settings.py  settlement_repo.py  signals_repo.py  weather_ingest.py
kalbot/modeling/: __init__.py  low_temp_model.py
scripts/: apply-migrations.cmd  apply-migrations.ps1  run-daily.cmd  run-daily.ps1  start-backend.cmd  start-backend.ps1  start-frontend.cmd  start-frontend.ps1
tests/: test_backtest_repo.py  test_bot_intel_repo.py  test_data_quality_repo.py  test_kalshi_ingest.py  test_paper_execution.py  test_provenance_repo.py  test_settings.py  test_settlement_repo.py  test_signal_repo.py  test_weather_ingest.py
workers/: __init__.py
workers/kalbot_workers/: __init__.py  cli.py  pipeline.py
