[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalbot"
version = "0.1.0"
description = "Kalshi weather prediction and execution framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.3",
  "typer>=0.12.5",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.3",
]

[tool.setuptools.packages.find]
include = ["backend*", "workers*", "kalbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
